Cheevos icon and text is customisable

--- a/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/OfficeCheevosClient.csproj
+++ b/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/OfficeCheevosClient.csproj
@@ -110,6 +110,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\defaultIcon.png" />
     <Resource Include="Resources\cheevo.png" />
     <Content Include="Resources\cheevo_sound.wav" />
   </ItemGroup>
