--- a/Code/Server/CheevoService/CheevoService/Properties/Settings.settings
+++ b/Code/Server/CheevoService/CheevoService/Properties/Settings.settings
@@ -2,15 +2,15 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CheevoService.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
+    <Setting Name="CheevoPacksDirectory" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">TestCheevos</Value>
+    </Setting>
     <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sample.s3db&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=sample.s3db;DateTimeFormat=Ticks&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sample.s3db</Value>
-    </Setting>
-    <Setting Name="CheevoPacksDirectory" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">TestCheevos</Value>
+      <Value Profile="(Default)">Data Source=sample.s3db;DateTimeFormat=Ticks</Value>
     </Setting>
   </Settings>
 </SettingsFile>
