--- a/Code/Server/CheevoService/CheevoService/app.config
+++ b/Code/Server/CheevoService/CheevoService/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="CheevoService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CheevoService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="CheevoService.Properties.Settings.ConnectionString"
@@ -16,4 +19,11 @@
             </setting>
         </CheevoService.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <CheevoService.Properties.Settings>
+            <setting name="AddressToListenOn" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+        </CheevoService.Properties.Settings>
+    </userSettings>
 </configuration>
